[tool.poetry]
name = "superbench-langgraph"
version = "0.1.0"
description = ""
authors = ["Thomas Chiang <t7hiang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.13.5"
beautifulsoup4 = "*"
langchain-community = "*"
tiktoken = "*"
langchainhub = "*"
langchain = "*"
langgraph = "*"
langchain-openai = "*"
python-dotenv = "*"
black = "*"
isort = "*"
langchain-chroma = "*"
langchain-google-genai = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"